--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,40 +8,33 @@ on:
     branches: [ main ]
 
 jobs:
-
-  check_draft_job:
-    name: Check if commit is draft
+  check_draft:
+    name: Check Draft Status
     runs-on: ubuntu-latest
-    # Запускаем при пуше в main или при создании тега
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
+    if: github.ref == 'refs/heads/main'
+    outputs:
+      is_draft: ${{ steps.check.outputs.is_draft }}
     steps:
-
-    - name: Check if commit is draft (only for main branch)
-      id: check_draft
-      if: github.ref == 'refs/heads/main'
-      run: |
-        # Получаем заголовок коммита, который вызвал этот workflow
-        COMMIT_MESSAGE=$(git log -1 --pretty=format:%s ${{ github.sha }})
-        echo "Trigger commit message: $COMMIT_MESSAGE"
+      - name: Checkout code
+        uses: actions/checkout@v4
         
-        # Проверяем, заканчивается ли заголовок на "-draft"
-        if [[ "$COMMIT_MESSAGE" == *"-draft" ]]; then
-          echo "Commit is marked as draft. Skipping release creation."
-          echo "is_draft=true" >> $GITHUB_OUTPUT
-        else
-          echo "Commit is not draft. Proceeding with release creation."
-          echo "is_draft=false" >> $GITHUB_OUTPUT
-        fi
-
-    - name: Skip release for draft commits (only for main branch)
-      if: github.ref == 'refs/heads/main' && steps.check_draft.outputs.is_draft == 'true'
-      run: |
-        echo "Skipping release creation because the commit is marked as draft."
-        exit 1
-
+      - name: Check if commit is draft
+        id: check
+        run: |
+          COMMIT_MESSAGE=$(git log -1 --pretty=format:%s)
+          echo "Last commit message: $COMMIT_MESSAGE"
+          
+          if [[ "$COMMIT_MESSAGE" == *"-draft" ]]; then
+            echo "is_draft=true" >> $GITHUB_OUTPUT
+          else
+            echo "is_draft=false" >> $GITHUB_OUTPUT
+          fi
+  
   # Linux builds
   build-linux-amd64:
     name: Build Linux AMD64
+    needs: check_draft
+    if: (needs.check_draft.outputs.is_draft != 'true')
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
@@ -70,6 +63,8 @@ jobs:
 
   build-linux-arm64:
     name: Build Linux ARM64
+    needs: check_draft
+    if: (needs.check_draft.outputs.is_draft != 'true')
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
@@ -99,6 +94,8 @@ jobs:
   # Windows builds
   build-windows-amd64:
     name: Build Windows AMD64
+    needs: check_draft
+    if: (needs.check_draft.outputs.is_draft != 'true')
     runs-on: windows-latest
     steps:
     - name: Checkout code
@@ -131,6 +128,8 @@ jobs:
   # macOS builds
   build-darwin-amd64:
     name: Build macOS AMD64
+    needs: check_draft
+    if: (needs.check_draft.outputs.is_draft != 'true')
     runs-on: macos-latest
     steps:
     - name: Checkout code
@@ -159,6 +158,8 @@ jobs:
 
   build-darwin-arm64:
     name: Build macOS ARM64
+    needs: check_draft
+    if: (needs.check_draft.outputs.is_draft != 'true')
     runs-on: macos-latest
     steps:
     - name: Checkout code
@@ -188,6 +189,8 @@ jobs:
   # Other Unix-like systems
   build-solaris-amd64:
     name: Build Solaris AMD64
+    needs: check_draft
+    if: (needs.check_draft.outputs.is_draft != 'true')
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
@@ -216,6 +219,8 @@ jobs:
 
   build-freebsd-amd64:
     name: Build FreeBSD AMD64
+    needs: check_draft
+    if: (needs.check_draft.outputs.is_draft != 'true')
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
@@ -244,9 +249,10 @@ jobs:
 
   release:
     name: Create Release
+    needs: check_draft
     runs-on: ubuntu-latest
     # Запускаем при пуше в main или при создании тега
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') && needs.check_draft.outputs.is_draft != 'true')
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
